2004-02-22  Ge van Geldorp <ge@gse.nl>

	* Implement keyboard navigation for menus

2004-02-22  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* Makefile (all): Put REGTESTS dependency earlier in the list.
	* lib/kernel32/makefile: Support regression tests.
	* lib/kernel32/misc/dllmain.c: Prepare regression tests.
	* regtests/win32base/driver.c: (DummyThreadMain,
	RunPrivateTests): Add.
	(RegTestMain): Run private module regression tests.
	* tools/helper.mk: Add rtshared.a to MK_LIBS if building
	user-mode regression tests.
	* tools/regtests.c (UMSTUB): Add.
	(main): Output user-mode stub.
	* lib/kernel32/tests: New directory.
	* lib/kernel32/tests/.cvsignore: New file.
	* lib/kernel32/tests/Makefile: New file.
	* lib/kernel32/tests/tests: New directory.
	* lib/kernel32/tests/tests/.cvsignore: New file.
	* regtests/win32base/tests/file-1.c: move...
	* lib/kernel32/tests/tests/file-1.c: ...here.

2004-02-22  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* config (REGRESSIONTESTS): Add.
	* rules.mak (REGTESTS_PATH_INC): Add.
	* drivers/net/tcpip/makefile: Support regression tests.
	* drivers/net/tcpip/tcpip/main.c: Prepare regression tests.
	* hal/halx86/Makefile: Rename TARGET_LIBPATH to TARGET_IMPLIBPATH.
	* regtests/kmregtests/driver.c (KMRegTestsRegister): Add.
	(KMRegTestsRun): Move call to InitializeTests() and RegisterTests() to
	DriverEntry().
	(KMRegTestsDispatch): Support IOCTL_KMREGTESTS_REGISTER.
	* regtests/kmregtests/kmregtests.h (IOCTL_KMREGTESTS_REGISTER): Define.
	* tools/config.mk: Define REGTESTS if REGRESSIONTESTS = 1.
	* tools/helper.mk: Support module private regression tests.
	(TARGET_LIBPATH): Rename to TARGET_IMPLIBPATH.
	(TARGET_LIBPATH, TARGET_REGTESTS): Add.
	* tools/mkconfig.c: Support REGTESTS.
	* tools/regtests.c (umstubfile, kmstubfile): Add.
	(is_file_changed, write_file_if_changed): Add.
	(KMSTUB): Add.
	(HELP): Mention -u and -k switches.
	(main): Parse -u and -k switches.
	* drivers/net/tcpip/tests: New directory.