@@ -119,20 +119,13 @@ EDITMENU MENU LOADONCALL MOVEABLE DISCARDABLE
 
 SYSMENU MENU LOADONCALL MOVEABLE DISCARDABLE
 {
-  POPUP ""
-  {
-    MENUITEM "&Restore", 61728
-    MENUITEM "&Move", 61456
-    MENUITEM "&Size", 61440
-    MENUITEM "Mi&nimize", 61472
-    MENUITEM "Ma&ximize", 61488
-    MENUITEM SEPARATOR
-    MENUITEM "&Close\tAlt-F4", 61536
-  //MENUITEM SEPARATOR
-  //MENUITEM "&Switch to ...\tCtrl-Esc", 61744
-  //MENUITEM SEPARATOR
-  //MENUITEM "&About ReactOS ...", 61761
-  }
+  MENUITEM "&Restore", 61728
+  MENUITEM "&Move", 61456
+  MENUITEM "&Size", 61440
+  MENUITEM "Mi&nimize", 61472
+  MENUITEM "Ma&ximize", 61488
+  MENUITEM SEPARATOR
+  MENUITEM "&Close\tAlt-F4", 61536
 }
 
 /////////////////////////////////////////////////////////////////////////////
